youfull/objects/Report_Filter__c.object
<CustomObject>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <label>Filter_Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Key__c</fullName>
        <label>Filter Key</label>
        <picklist>
            <picklistValues>
                <fullName>All_Badge_Titles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All_Paid_Titles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthdays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochures_Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings_Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ending_Rep_Cnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive_Rising_Stars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First_Order_Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1_Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1_Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G1_Sales_Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2_Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G3_Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G4_Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G5_Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G6_Representatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Held_Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_In_Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive_In_Prior_Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inherited_Last_Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA_1_6_Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA_1_Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA (1-6)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum_Order_Value_Explicit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New_Title_Achievers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_Brochures_Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_Super_Hits_Ordered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Filter_Type__c</fullName>
        <label>Filter Type</label>
        <picklist>
            <picklistValues>
                <fullName>Who</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generations_Depth__c</fullName>
        <label>Generations Depth</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Drillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Drillable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rep_List_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to &apos;true&apos;, the report shows all downline users, including non-leaders</description>
        <inlineHelpText>If set to &apos;true&apos;, the report shows all downline users, including non-leaders</inlineHelpText>
        <label>Is Rep List Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sortable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Sortable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LANG_CD__c</fullName>
        <label>LANG_CD</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Config__c</fullName>
        <label>Report Config</label>
        <referenceTo>Report_Config__c</referenceTo>
        <relationshipLabel>Report Filters</relationshipLabel>
        <relationshipName>Report_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Report Filter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Report Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>